# ansible-aam

./: .gitignore  README.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260319_0001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  scheduler.py  schemas.py  security.py  worker.py
backend/app/api/: routes.py
backend/app/services/: collector.py  connectors.py  dashboard.py  monitoring.py  policies.py  search.py
deploy/: docker-compose.yml
deploy/env/: backend.env.example
docs/: architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: api.ts  app.tsx  capabilities.ts  main.tsx  monitoring.ts  styles.css  types.ts  utils.ts  vite-env.d.ts
frontend/src/components/: activity-table.tsx  empty-state.tsx  environment-form.tsx  layout.tsx  link-button.tsx  metric-bar-chart.tsx  page-header.tsx  stat-card.tsx  status-pill.tsx
frontend/src/pages/: activity.tsx  dashboard.tsx  environment-detail.tsx  environments.tsx  monitoring.tsx  policies.tsx  search.tsx  settings.tsx  topology.tsx
